Name:                DPLLSat
Version:             0.3
Cabal-Version:       >= 1.2
Description:

    The goal is to create a realistic satisfiability solver.  Current features
    include two-watched literals, conflict-directed learning, non-chronological
    backtracking, and restarts.

Stability:           alpha
License:             LGPL
License-file:        LICENSE
Author:              Denis Bueno
Maintainer:          Denis Bueno <dbueno@gmail.com>
Build-type:          Simple

Executable funsat
 Main-is:             Main.hs
 Ghc-options:         -W
 Extensions:          CPP
 CPP-options:         -DTESTING
 Hs-source-dirs:      . tests
 Other-modules:       DPLLSat Properties FastDom Utils Text.Tabular
 Build-Depends:       base, parsec, containers, pretty, mtl
                      , random, array, QuickCheck, parse-dimacs, bitset
                      , fgl, time

Executable funsat-prof
 Main-is:             Main.hs
 Ghc-options:         -W -prof -auto-all
 Extensions:          CPP
 CPP-options:         -DTESTING
 Hs-source-dirs:      . tests
 Other-modules:       DPLLSat Properties FastDom Utils Text.Tabular
 Build-Depends:       base, parsec, containers, pretty, mtl
                      , random, array, QuickCheck, parse-dimacs, bitset
                      , fgl, time


Library
 Exposed-modules:     DPLLSat
 Other-modules:       FastDom Utils
 Ghc-options:         -W
 CPP-options:         -DTESTING
 Extensions:          CPP
 Hs-source-dirs:      . tests
 Build-Depends:       base, parsec, containers, pretty, mtl
                      , random, array, QuickCheck, parse-dimacs, bitset
                      , fgl
