Name:                funsat
Version:             0.6.2
Cabal-Version:       >= 1.2
Description:

    Funsat is a native Haskell SAT solver that uses modern techniques for
    solving SAT instances.  Current features include two-watched literals,
    conflict-directed learning, non-chronological backtracking, a VSIDS-like
    dynamic variable ordering, and restarts.  Our goal is to facilitate
    convenient embedding of a reasonably fast SAT solver as a constraint
    solving backend in other applications.

    Currently along this theme we provide unsatisfiable core generation (see
    "Funsat.Resolution") and a logical circuit interface (see "Funsat.Circuit").

    New in 0.6.2: works with ghc-6.12 and fixed some space leaks. =/

Synopsis:            A modern DPLL-style SAT solver
Homepage:            http://github.com/dbueno/funsat
Category:            Algorithms
Stability:           beta
License:             BSD3
License-file:        LICENSE
Author:              Denis Bueno
Maintainer:          Denis Bueno <dbueno@gmail.com>
Build-type:          Simple
Extra-source-files:  README CHANGES


Executable funsat
 Main-is:             Main.hs
 Ghc-options:         -funbox-strict-fields
                      -Wall -fwarn-tabs
                      -fno-warn-name-shadowing
                      -fno-warn-orphans
 Extensions:          CPP, ScopedTypeVariables
 CPP-options:         -DTESTING
 Hs-source-dirs:      . src tests
 Other-modules:
                      Control.Monad.MonadST
                      Funsat.FastDom
                      Funsat.Monad
                      Funsat.Resolution
                      Funsat.Solver
                      Funsat.Types
                      Funsat.Types.Internal
                      Funsat.Utils
                      Text.Tabular
                      Properties

 Build-Depends:       base < 4,
                      random,
                      containers,
                      pretty,
                      mtl,
                      array,
                      QuickCheck >= 2 && < 3,
                      parse-dimacs >= 1.2 && < 2,
                      bitset >= 1 && < 2,
                      bimap >= 0.2 && < 0.3,
                      fgl,
                      time

Library
 Exposed-modules:     Control.Monad.MonadST
                      Funsat.Circuit
                      Funsat.Monad
                      Funsat.Resolution
                      Funsat.Solver
                      Funsat.Types
                      Funsat.Types.Internal
                      Text.Tabular
 Other-modules:       Funsat.FastDom Funsat.Utils
 Ghc-options:         -funbox-strict-fields
                      -Wall -fwarn-tabs
                      -fno-warn-name-shadowing
                      -fno-warn-orphans
 Extensions:          CPP, ScopedTypeVariables
 Hs-source-dirs:      src
 Build-Depends:       base,
                      containers,
                      pretty,
                      mtl,
                      array,
                      parse-dimacs >= 1.2 && < 2,
                      bitset >= 1 && < 2,
                      bimap >= 0.2 && < 0.3,
                      fgl
