Name:                funsat
Version:             0.6.3
Cabal-Version:       >= 1.10
Description:

    Funsat is a native Haskell SAT solver that uses modern techniques for
    solving SAT instances.  Current features include two-watched literals,
    conflict-directed learning, non-chronological backtracking, a VSIDS-like
    dynamic variable ordering, and restarts.  Our goal is to facilitate
    convenient embedding of a reasonably fast SAT solver as a constraint
    solving backend in other applications.

    Currently along this theme we provide unsatisfiable core generation (see
    "Funsat.Resolution") and a logical circuit interface (see "Funsat.Circuit").

    New in 0.6.2: works with ghc-6.12 and fixed some space leaks. =/

Synopsis:            A modern DPLL-style SAT solver
Homepage:            http://github.com/dbueno/funsat
Category:            Algorithms
Stability:           beta
License:             BSD3
License-file:        LICENSE
Author:              Denis Bueno
Maintainer:          Denis Bueno <dbueno@gmail.com>
Build-type:          Simple
Extra-source-files:  README
                     CHANGES
                     test.sh
                     tests/Properties.hs
                     tests/TestMain.hs
                     tests/Integration.hs
                     tests/problems/*/*.cnf


Executable funsat
 Main-is:             Main.hs
 Default-language:    Haskell2010
 Ghc-options:         -funbox-strict-fields
                      -Wall
                      -fwarn-tabs
                      -fno-warn-name-shadowing
                      -fno-warn-orphans
 Extensions:          CPP,
                      BangPatterns,
                      ScopedTypeVariables,
                      TypeSynonymInstances,
                      MultiParamTypeClasses,
                      FunctionalDependencies,
                      FlexibleInstances,
                      FlexibleContexts
 Hs-source-dirs:      . src
 Other-modules:
                      Control.Monad.MonadST
                      Funsat.FastDom
                      Funsat.Monad
                      Funsat.Resolution
                      Funsat.Solver
                      Funsat.Types
                      Funsat.Types.Internal
                      Funsat.Utils
                      Funsat.Utils.Internal
                      Text.Tabular

 Build-Depends:       base >= 3 && < 5,
                      containers,
                      pretty < 2,
                      mtl,
                      array,
                      parse-dimacs >= 1.2 && < 2,
                      bitset >= 1 && < 2,
                      bimap >= 0.2 && < 0.6,
                      fgl,
                      time

Library
 Default-language:    Haskell2010
 Extensions:          CPP,
                      BangPatterns,
                      ScopedTypeVariables,
                      TypeSynonymInstances,
                      MultiParamTypeClasses,
                      FunctionalDependencies,
                      FlexibleInstances,
                      FlexibleContexts,
                      GeneralizedNewtypeDeriving
 Exposed-modules:     Control.Monad.MonadST
                      Funsat.Circuit
                      Funsat.Monad
                      Funsat.Resolution
                      Funsat.Solver
                      Funsat.Types
                      Funsat.Types.Internal
                      Text.Tabular
                      Funsat.Utils
                      Funsat.Utils.Internal
 Other-modules:       Funsat.FastDom
 Ghc-options:         -funbox-strict-fields
                      -Wall -fwarn-tabs
                      -fno-warn-name-shadowing
                      -fno-warn-orphans
 Extensions:          CPP, ScopedTypeVariables
 Hs-source-dirs:      src
 Build-Depends:       base >= 3 && < 5,
                      containers,
                      pretty < 2,
                      mtl,
                      array,
                      parse-dimacs >= 1.2 && < 2,
                      bitset >= 1 && < 2,
                      bimap >= 0.2 && < 0.6,
                      fgl

Test-Suite funsat-tests
 Type:                exitcode-stdio-1.0
 Main-is:             TestMain.hs
 Default-language:    Haskell2010
 Hs-source-dirs:      tests
 Other-modules:       Properties
                      Integration
 Extensions:          CPP,
                      BangPatterns,
                      ScopedTypeVariables,
                      TypeSynonymInstances,
                      MultiParamTypeClasses,
                      FunctionalDependencies,
                      FlexibleInstances,
                      FlexibleContexts
 Ghc-options:         -funbox-strict-fields
                      -Wall
                      -fwarn-tabs
                      -fno-warn-name-shadowing
                      -fno-warn-orphans
 Build-Depends:       base >= 3 && < 5,
                      funsat,
                      random < 2,
                      containers,
                      pretty < 2,
                      mtl,
                      array,
                      QuickCheck >= 2 && < 3,
                      parse-dimacs >= 1.2 && < 2,
                      bitset >= 1 && < 2,
                      bimap >= 0.2 && < 0.6,
                      fgl,
                      directory,
                      filepath
