cabal-version:       2.4
name:                funsat
version:             0.6.3
description:

    Funsat is a native Haskell SAT solver that uses modern techniques for
    solving SAT instances.  Current features include two-watched literals,
    conflict-directed learning, non-chronological backtracking, a VSIDS-like
    dynamic variable ordering, and restarts.  Our goal is to facilitate
    convenient embedding of a reasonably fast SAT solver as a constraint
    solving backend in other applications.

    Currently along this theme we provide unsatisfiable core generation (see
    "Funsat.Resolution") and a logical circuit interface (see "Funsat.Circuit").

    New in 0.6.2: works with ghc-6.12 and fixed some space leaks. =/

synopsis:            A modern DPLL-style SAT solver
homepage:            https://github.com/dbueno/funsat
bug-reports:         https://github.com/dbueno/funsat/issues
category:            Algorithms
stability:           beta
license:             BSD-3-Clause
license-file:        LICENSE
author:              Denis Bueno
maintainer:          Denis Bueno <dbueno@gmail.com>
build-type:          Simple
extra-source-files:  README
                     CHANGES
                     tests/Properties.hs
                     tests/TestMain.hs
                     tests/Integration.hs
                     tests/problems/**/*.cnf

source-repository head
  type: git
  location: https://github.com/dbueno/funsat.git

executable funsat
 main-is:             Main.hs
 default-language:    Haskell2010
 ghc-options:         -funbox-strict-fields
                      -Wall
                      -fwarn-tabs
                      -fno-warn-name-shadowing
                      -fno-warn-orphans
 default-extensions:  CPP,
                      BangPatterns,
                      ScopedTypeVariables,
                      TypeSynonymInstances,
                      MultiParamTypeClasses,
                      FunctionalDependencies,
                      FlexibleInstances,
                      FlexibleContexts
 hs-source-dirs:      . src
 other-modules:
                      Paths_funsat
                      Control.Monad.MonadST
                      Funsat.FastDom
                      Funsat.Monad
                      Funsat.Resolution
                      Funsat.Solver
                      Funsat.Types
                      Funsat.Types.Internal
                      Funsat.Utils
                      Funsat.Utils.Internal
                      Text.Tabular

 build-depends:       base >= 3 && < 5,
                      containers,
                      pretty < 2,
                      mtl,
                      array,
                      parse-dimacs >= 1.2 && < 2,
                      bitset >= 1 && < 2,
                      bimap >= 0.2 && < 0.6,
                      fgl,
                      time

library
 default-language:    Haskell2010
 default-extensions:  CPP,
                      BangPatterns,
                      ScopedTypeVariables,
                      TypeSynonymInstances,
                      MultiParamTypeClasses,
                      FunctionalDependencies,
                      FlexibleInstances,
                      FlexibleContexts,
                      GeneralizedNewtypeDeriving
 exposed-modules:     Control.Monad.MonadST
                      Funsat.Circuit
                      Funsat.Monad
                      Funsat.Resolution
                      Funsat.Solver
                      Funsat.Types
                      Funsat.Types.Internal
                      Text.Tabular
                      Funsat.Utils
                      Funsat.Utils.Internal
 other-modules:       Funsat.FastDom
 ghc-options:         -funbox-strict-fields
                      -Wall -fwarn-tabs
                      -fno-warn-name-shadowing
                      -fno-warn-orphans
 hs-source-dirs:      src
 build-depends:       base >= 3 && < 5,
                      containers,
                      pretty < 2,
                      mtl,
                      array,
                      parse-dimacs >= 1.2 && < 2,
                      bitset >= 1 && < 2,
                      bimap >= 0.2 && < 0.6,
                      fgl

test-suite funsat-tests
 type:                exitcode-stdio-1.0
 main-is:             TestMain.hs
 default-language:    Haskell2010
 hs-source-dirs:      tests
 other-modules:       Properties
                      Integration
 default-extensions:  CPP,
                      BangPatterns,
                      ScopedTypeVariables,
                      TypeSynonymInstances,
                      MultiParamTypeClasses,
                      FunctionalDependencies,
                      FlexibleInstances,
                      FlexibleContexts
 ghc-options:         -funbox-strict-fields
                      -Wall
                      -fwarn-tabs
                      -fno-warn-name-shadowing
                      -fno-warn-orphans
 build-depends:       base >= 3 && < 5,
                      funsat,
                      random < 2,
                      containers,
                      pretty < 2,
                      mtl,
                      array,
                      QuickCheck >= 2 && < 3,
                      parse-dimacs >= 1.2 && < 2,
                      bitset >= 1 && < 2,
                      bimap >= 0.2 && < 0.6,
                      fgl,
                      directory,
                      filepath
