Name:                parse-dimacs
Version:             1.2
Synopsis:            DIMACS CNF parser library
Description:         
    A DIMACS CNF parser library, implemented with Parsec 3, using ByteStrings.
Category:            Parsing
License:             LGPL
License-file:        LICENSE
Author:              Denis Bueno
Maintainer:          Denis Bueno <dbueno@gmail.com>
Stability:           provisional
Build-Depends:       base, parsec >= 3, bytestring
Build-type:          Simple
Tested-with:         GHC==6.8.2
Extra-source-files:  CHANGES

Exposed-modules:     Language.CNF.Parse.ParseDIMACS
Ghc-options:         -fwarn-incomplete-patterns
                     -fwarn-dodgy-imports -fwarn-incomplete-record-updates
                     -fwarn-unused-binds -fwarn-unused-imports
