cabal-version:       2.4
name:                bitset
version:             1.1
synopsis:            A functional data structure for efficient membership testing.
description:
        A /bit set/ maintains a record of members from a type that can be mapped
        into (non-negative) @Int@s.  Supports insertion, deletion, size, and
        membership testing, and is completely pure (functional).
category:            Data Structures
license:             BSD-3-Clause
license-file:        LICENSE
author:              Denis Bueno
maintainer:          Denis Bueno <dbueno@gmail.com>
stability:           provisional
build-type:          Simple
extra-source-files:  tests/Properties.hs
extra-doc-files:     CHANGES

library
  exposed-modules:     Data.BitSet
  build-depends:       base >= 4.0.0 && < 5, QuickCheck >= 2 && < 3
  default-language:    Haskell2010
  default-extensions:  ScopedTypeVariables, DeriveDataTypeable
  ghc-options:         -Wall

flag test
  description: Build test program.
  default:     False

executable test
  hs-source-dirs:      tests
  other-modules:       Properties
  main-is:             Main.hs
  build-depends:       base >= 4.0.0 && < 5
  default-language:    Haskell2010
  default-extensions:  ScopedTypeVariables, DeriveDataTypeable
  ghc-options:         -Wall
  if !flag(test)
    buildable:         False
