cabal-version:       2.4
name:                fiblib
version:             0.1
synopsis:            A functional Fibonacci heap
description:
    A functional implementation of a Fibonacci heap based on the textbook
    presentation from Cormen, Rivest, and related algorithms texts.
category:            Data Structures
license:             LGPL-2.1-only
author:              Denis Bueno
maintainer:          Denis Bueno <dbueno@gmail.com>
stability:           provisional
build-type:          Simple
extra-source-files:  Properties.hs

library
  exposed-modules:     Data.FibHeap
  other-modules:       Data.FibHeapST
                       Data.SequenceZipper
  hs-source-dirs:      .
  build-depends:       base >= 3 && < 5,
                       QuickCheck >= 2 && < 3,
                       containers < 1
  default-language:    Haskell2010
  default-extensions:  CPP
  cpp-options:         -DTESTING
  ghc-options:         -Wall
