Name:                parse-dimacs
Version:             1.3
Cabal-Version:       >= 1.2
Synopsis:            DIMACS CNF parser library
Description:         

    A DIMACS CNF parser library, implemented with Parsec 3, using ByteStrings.
    DIMACS CNF is a file format for describing constraint problems in
    conjunctive normal form.

Category:            Parsing
License:             BSD3
License-file:        LICENSE
Author:              Denis Bueno
Maintainer:          Denis Bueno <dbueno@gmail.com>
Stability:           provisional
Build-type:          Simple
Tested-with:         GHC==6.8.3,GHC==7.4.1
Extra-source-files:  CHANGES


-- Executable pdtest
--  Main-is:            Main.hs
--  Build-depends:      parsec >= 3, base, bytestring, array
--  Ghc-options:        -funbox-strict-fields
--                      -fwarn-incomplete-patterns
--                      -fwarn-dodgy-imports -fwarn-incomplete-record-updates
--                      -fwarn-unused-binds -fwarn-unused-imports
--  Ghc-prof-options:   -auto-all
--  Hs-source-dirs:     . tests
--  Other-modules:      Language.CNF.Parse.ParseDIMACS

Library
 Exposed-modules:    Language.CNF.Parse.ParseDIMACS
 Build-depends:      parsec >= 3, base < 5, bytestring, array
 Ghc-options:        -fwarn-incomplete-patterns
                     -fwarn-dodgy-imports -fwarn-incomplete-record-updates
                     -fwarn-unused-binds -fwarn-unused-imports


