cabal-version:       2.4
name:                sat-micro-hs
version:             0.1.2
description:
    A complete SAT solver, in the logical sense, with non-chronological
    backtracking. This package is a Haskell implementation of most of the
    minimal OCaml solver described in the paper "SAT-MICRO: petit mais
    costaud!" by Sylvain Conchon, Johannes Kanig, and Stephane Lescuyer.
synopsis:            A minimal SAT solver
category:            Algorithms
stability:           alpha
license:             BSD-3-Clause
license-file:        LICENSE
author:              Denis Bueno
maintainer:          Denis Bueno <dbueno@gmail.com>
build-type:          Simple
tested-with:         GHC == 6.8.2

executable sat-micro
  main-is:             Main.hs
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall
  other-modules:       SatMicro
  build-depends:       base >= 3 && < 5,
                       containers < 1,
                       pretty < 2,
                       mtl < 3,
                       parse-dimacs >= 1.2 && < 2

library
  exposed-modules:     SatMicro
  hs-source-dirs:      .
  default-language:    Haskell2010
  build-depends:       base >= 3 && < 5,
                       containers < 1,
                       pretty < 2,
                       mtl < 3,
                       parse-dimacs >= 1.2 && < 2
